[04-06-2023] Upload TeX sources

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -168,11 +168,141 @@
 
 Как видим, полномочия веча были довольно широки, никакой закон не ограничивал и не определял их. Собрания начинались стихийно, чаще всего при возникновении какой-либо острой ситуации. Иногда ополчение собирало вече во время похода. \textbf{Нельзя также преувеличивать роль веча}. Когда власть князя была крепка, он действовал самостоятельно, и совет веча был для него необязателен. Но \textbf{во многих случаях он должен был считаться с волей народа}.
 
-\pagebreak
 \subsection{Сословный строй Киевского государства}
 
 \begin{bclogo}[logo=\bcinfo, couleurBarre=orange, noborder=true, couleur=white]{Примечание}
     Данный материал доступен в справочном материале по предыдущему вопросу
 \end{bclogo}
+
+\pagebreak
+\section{Вопрос №4. «Русская Правда» — основной свод законов древнерусского государства}
+
+Русская Правда — \textbf{сборник правовых норм} Киевской Руси, датированный различными годами, начиная с 1016 года, \textbf{древнейший русский правовой кодекс}. Является одним из основных письменных источников русского права. Происхождение наиболее ранней части Русской Правды связано с деятельностью князя \textbf{Ярослава Мудрого}. Написана на древнерусском языке. Русская Правда стала основой русского законодательства и сохраняла своё значение до XV—XVI веков.
+
+\subsection{Право по Русской Правде}
+
+\subsubsection{Уголовное право}
+
+Как и другие ранние правовые памятники, Русская Правда \textbf{отличает убийство неумышленное}, «в сваде», то есть во время ссоры, \textbf{от умышленного} — «в обиду», и от убийства «в разбое». \textbf{Различалось причинение тяжкого или слабого ущерба, а также действия, наиболее оскорбительные для пострадавшего}
+
+\textbf{Уголовные санкции}
+
+\begin{enumerate}
+    \item Правда Ярослава санкционировала \textbf{кровную месть}, но ограничивала круг мстителей определёнными ближайшими родственниками убитого
+    \item Штрафы в пользу князя:
+    \begin{enumerate}
+        \item \textbf{Вира} — штраф за убийство свободного человека
+        \item \textbf{Полувирье} — штраф за тяжкие увечья свободному человеку
+        \item \textbf{Продажа} — штраф за другие уголовные преступления — нанесение менее тяжких телесных повреждений, кражу и другое
+    \end{enumerate}
+    \item Плата пострадавшим:
+    \begin{enumerate}
+        \item \textbf{Головничество} — плата в пользу родственников убитого
+        \item \textbf{Плата «за обиду»} — как правило, плата потерпевшему
+        \item \textbf{Урок} — плата хозяину за украденную или испорченную вещь или за убитого холопа
+    \end{enumerate}
+    \item Наиболее тяжкими преступлениями считались \textbf{разбой «безъ всякоя свады», поджог гумна или двора и конокрадство}. За них преступник подвергался потоку и разграблению. Первоначально это была высылка преступника и конфискация имущества, позднее — \textbf{преступник и его семья обращались в рабство, а его имущество подвергалось разграблению}. Поток и разграбление инициировала община, а осуществляла княжеская власть, то есть \textbf{эта мера наказания уже была поставлена под контроль государства}
+\end{enumerate}
+
+\subsubsection{Частное право}
+
+По Русской Правде купец мог \textbf{отдавать имущество на хранение} (поклажа). Совершались \textbf{ростовщические операции}: в рост давались деньги — отданное (исто) возвращалось с процентами (резы), или продукты с возвратом в пропорционально большем размере. Подробно представлены нормы наследственного права. \textbf{Предусматривалось наследование как по закону, так и по завещанию}
+
+\subsubsection{Процессуальное право}
+
+\textbf{Уголовные правонарушения рассматривал княжий (княжеский) суд} — суд, осуществлявшийся представителем князя. Пойманного на дворе в ночное время вора можно было убить на месте или вести на княжий суд.
+
+По гражданским делам процесс носил состязательный (обвинительный) характер, при котором \textbf{стороны были равноправными и сами осуществляли процессуальные действия}.
+
+\subsection{Социальные категории по Русской Правде}
+
+\textbf{Знать и привилегированные слуги}
+
+\begin{enumerate}
+    \item \textbf{Знать в Русской Правде представлена князем и его старшими дружинниками — боярами}. Князю идут штрафы, имущество которого защищают некоторые статьи, и именем которого вершится суд.
+    \item \textbf{Привилегированное положение имели тиуны, огнищане — высокопоставленные княжеские и боярские слуги}, а также княжеский старший конюх
+\end{enumerate}
+
+\hfill
+
+\textbf{Рядовые свободные жители}
+
+\begin{enumerate}
+    \item Основное действующее лицо Русской Правды — \textbf{муж — свободный мужчина}
+    \item Русин — житель Киевской Руси; \textbf{дружинник: гридин — представитель боевой дружины}
+    \item \textbf{Купчина} — дружинник, занимавшийся торговлей
+    \item \textbf{Ябетник} — дружинник, связанный с судебным процессом
+    \item \textbf{Мечник} — сборщик штрафов
+    \item \textbf{Изгой} — человек, потерявший связь с общиной
+\end{enumerate}
+
+\hfill
+
+\textbf{Зависимое население.} Привилегированное положение среди зависимых людей имели \textbf{княжеские кормильцы, а также княжеские сельские и ратайные старосты}
+
+Низшее положение занимали \textbf{смерды, холопы, рядовичи и закупы}
+
+\begin{enumerate}
+    \item \textbf{Смерд} — крестьянин, в этом контексте зависимый крестьянин
+    \item \textbf{Холопство} могло быть \textbf{обельным} (полным) или \textbf{закупным}. Обель — пожизненный раб.
+    \item \textbf{Закуп} — свободный человек, взявший купу — кредит, и попавший в зависимость до тех пор, пока не отдаст или не отработает этот долг
+    \item \textbf{Рядович} — лицо, поступившее на службу и ставшее зависимым по «ряду», то есть договору
+\end{enumerate}
+
+\pagebreak
+\section{Вопрос №5. Введение христианства на Руси: причины и историческое значение}
+
+\textbf{Крещение} \textbf{Руси} — термин, под которым в современной исторической науке понимается комплекс взаимосвязанных событий в основном конца X века, включавших личное крещение киевского князя \textbf{Владимира Святославича}, его окружения и населения крупнейших городов Киевской Руси, а также осуществленные княжеской властью меры по созданию на Руси церковной организации и среды; рассматривается как принятие христианства в качестве официальной религии Киевской Руси. Исторические источники дают противоречивые указания на точное время принятия новой религии. Традиционно, вслед за летописной хронологией, событие принято относить к \textbf{988 году} и считать началом официальной истории Русской церкви.
+
+\subsection{Причины принятия христианства на Руси}
+
+\begin{enumerate}
+    \item Необходимость объединения племен на новой духовной основе
+    \item Необходимость укрепления власти Киевского князя 
+    \item Стремление укрепить международный авторитет Киевской Руси.
+    \item Необходимость приобщения Руси к общеевропейским духовным и культурным ценностям
+    \item Личные мотивы князя Владимира
+\end{enumerate}
+
+\subsection{Значение принятия христианства на Руси}
+
+\begin{enumerate}
+    \item Сплочение народа вокруг единой религии
+    \item Улучшение международного положения страны, за счет принятия религии, которая существовала в странах-соседях.
+    \item Развитие христианской культуры, которая пришла в страну вместе с религией.
+    \item Укрепление власти князя в стране
+\end{enumerate}
+
+\pagebreak
+\section{Вопрос №6. Причины и хронологические рамки периода феодальной раздробленности}
+
+\subsection{Причины раздробленности}
+
+\begin{enumerate}
+    \item \textbf{Лестничная (родовая) система наследования престола}. Эта система с одной стороны постоянно увеличивала количество наследников, а с другой стороны также увеличивала число князей-изгоев. Все это вело к междоусобным войнами и ситуациям, когда князья делили страну между собой.
+    \item \textbf{Развитие земледелия}. Благодаря этому процессу многие дружинники стали землевладельцами. С развитием этого процесса землевладельцы становились крупнее и финансово сильнее. Крупных земледельцев очень не устраивала лестничная система наследования престола. Они всячески пытались ограничить власть князя или добиться завершения княжеских переходов.
+    \item \textbf{Развитие ремесла}. развитие ремесла имело важное следствие - рост городов и превращение их в культурные и политические центры.
+    \item \textbf{Падение торгового пути «из варяг в греки»}. Этот путь проходил через Русь и был тем экономическим стимулом, который заставлял страну держаться единой.
+\end{enumerate}
+
+\subsection{Хронологические рамки периода феодальной раздробленности}
+
+В современной отечественной исторической науке можно выделить 5 подходов к ответу на вопрос о начале феодальной раздробленности:
+
+\begin{enumerate}
+    \item \textbf{1054 год} (\textbf{смерть Ярослава Мудрого}). Такие историки как Карамзин, Насонов утверждали, что именно смерть Ярослава Мудрого является той чертой, после которой началась раздробленность.
+    \item \textbf{1097 год} (\textbf{Любечский съезд князей}). Этой версии придерживаются историки Лихачев, Греков. Они утверждают, что именно на Любечском съезде был утвержден феодальный принцип, что каждый сам «держит» свою землю.
+    \item \textbf{1132 год} (\textbf{смерть Мстислава Великого}). Это версия историков Сахарова, Рыбакова, Кузьмина. Они утверждают, что распад Руси на отдельный княжества стал возможным только после смерти князя Мстислава.
+    \item \textbf{1243 год} (\textbf{начало татаро-монгольского ига}). Эту версию озвучивают историки Кожников и Бегунов. Они утверждают, что распад был следствием вторжения монголов.
+    \item В современной науке все чаще публикуются мнения авторов, что никакого единого древнерусского государства не существовало, и что \textbf{феодальная раздробленность это начальная стадия становления нашего государства}. Это версия таких историков как Дьяконов, Дворниченко и других.
+\end{enumerate}
+
+После \textbf{вокняжения Ивана III} (\textbf{1462}) процесс объединения русских княжеств под властью Москвы вступил в решающую фазу.
+
+\textbf{В 1478 году был присоединён Новгород}, \textbf{в 1480 году была достигнута независимость от Орды}, \textbf{в 1487 году начался процесс перехода подвластных Литве князей с их землями под власть Москвы}.
+
+К концу правления Василия III (\textbf{1533}) \textbf{Москва стала центром Русского централизованного государства}, присоединив помимо всей Северо-Восточной Руси и Новгорода также смоленские и черниговские земли, отвоёванные у Литвы.
+
+\textbf{16 января 1547 года} великий князь Московский \textbf{Иван IV был венчан на царство}. Он распустил все уделы и объявил себя единственным царем.
 
 \end{document}
