[05-06-2023] Upload TeX sources

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -305,4 +305,94 @@
 
 \textbf{16 января 1547 года} великий князь Московский \textbf{Иван IV был венчан на царство}. Он распустил все уделы и объявил себя единственным царем.
 
+\pagebreak
+\section{Вопрос №7. Монголо-татарское нашествие и его последствия}
+
+\subsection{Начало нашествия и предпосылки}
+
+Впервые войска Руси и Орды сошлись \textbf{31 мая 1223 году} в \textbf{сражении на Калке}. Русские войска вел киевский князь \textbf{Мстислав}, а противостояли им \textbf{Субедей} и \textbf{Джубе}. Русское войско было не просто повержено, оно было фактически уничтожено.
+
+\subsection{Нашествие 1237–1238 годов}
+
+В \textbf{1236 году} монголы начали очередной поход против половцев. В этом походе они добились большого успеха и во второй половине \textbf{1237 года} подошли к границам рязанского княжества.  Командовал азиатской конницей хан \textbf{Батый}, внук Чингисхана. В его подчинении было \textbf{150 тысяч человек}. С ним в походе участвовал \textbf{Субедей}, который был знаком с русичами по предыдущим столкновениям.
+
+\hfill
+
+Вторжение произошло в \textbf{начале зимы 1237 года} (по другому мнению — \textbf{поздней осенью}). С огромной скоростью конница монголов передвигалась по стране, покоряя один город за другим:
+
+\begin{enumerate}
+    \item \textbf{Рязань} – пала в конце декабря 1237 года. Осада длилась 6 дней.
+    \item \textbf{Москва} – пала в январе 1238 года. Осада длилась 4 дня. Этому событию предшествовала битва под Коломной, где Юрий Всеволодович со своим войском пытался остановить врага, но был разбит.
+    \item \textbf{Владимир} – пал в феврале 1238 года. Осада длилась 8 дней. 
+\end{enumerate}
+
+После взятия Владимира \textbf{фактически все восточные и северные земли} оказались в руках Батыя. Он покорял один город за другим (Тверь, Юрьев, Суздаль, Переславль, Дмитров). В начале марта пал \textbf{Торжок}, открыв тем самым путь монгольскому войску на север, к Новгороду. Но Батый совершил другой маневр и вместо похода на Новгород, он развернул свои войска и отправился штурмовать \textbf{Козельск} — и, понеся большие потери, развернусь в степи. Так завершился первый поход и первое нашествие татаро-монгольского войска на Русь.
+
+\subsection{Нашествие 1239–1242 годов}
+
+После перерыва в полтора года, в 1239 году началось новое нашествие на Русь войск хана Батыя. В этом году основные события происходили в \textbf{Переяславе и Чернигове}. Вялость наступления Батыя связана с тем, что в это время он вел активную борьбу с половцами, в частности на территории Крыма.
+
+\hfill
+
+\textbf{Осень 1240} года Батый привел свое войско под стены \textbf{Киева}. Древняя столица Руси не смогла долго сопротивляться. Город пал 6 декабря 1240 года. Историки отмечают особое зверство, с которым вели себя захватчики. Киев был практически полностью уничтожен. После этих событий армия захватчиков разделилась:
+
+\begin{enumerate}
+    \item Часть отправилась на \textbf{Владимир-Волынский}.
+    \item Часть отправилась на \textbf{Галич}.
+\end{enumerate}
+
+\subsection{Последствия татаро-монгольского нашествия на Русь}
+
+Последствия нашествия азиатского войска на Русь историки описывают однозначно:
+
+\begin{enumerate}
+    \item \textbf{Страна была покорена, и стала полностью зависимой от Золотой Орды}.
+    \item \textbf{Русь начала ежегодно платить дань победителям} (деньгами и людьми).
+    \item \textbf{Страна впала в ступор в плане прогресса и развития из-за непосильного ига}.
+\end{enumerate}
+
+\pagebreak
+\section{Вопрос №8. Москва — центр объединения русских земель}
+
+Возвышение Москвы — политический процесс, который проходил в \textbf{14-15 веках}. Этот процесс интересен тем, что \textbf{в результате борьбы между удельными княжествами победу одержала Москва} — город, который буквально за 100 лет до этого был провинциальным, а в момент возвышения не отличался ни богатством, ни условиями. Но благодаря симбиозу Москвы, Орды и церкви этот процесс стал возможным.
+
+\subsection{Этапы объединения русских земель вокруг Москвы}
+
+Весь процесс возвышение Московского княжества и объединения русских земель можно свести к 3-м основным этапам:
+
+\begin{enumerate}
+    \item Конец 13 века — 80-е годы 14 века
+    \item 90-е годы 14 века — 1462 год
+    \item 1462 — 1533 годы
+\end{enumerate}
+
+\subsubsection{Первый этап — до 80-х годов 14 века}
+
+Этот этап \textbf{характеризуется борьбой между Москвой, Тверью и частично Литвой}. Главный процесс, который происходил в это время — борьба отдельных княжеств северо-восточной Руси за главенствующее положение. В результате \textbf{Москве удалось закрепить ярлык на Великое княжение за собой}. Важный момент — московский князь получил ярлык на Великое княжение, но назывался он князем владимирским.
+
+\subsubsection{Второй этап (конец 14 века – 1462)}
+
+На втором этапе \textbf{борьба продолжалась между Москвой, Тверью и Литвой}. Именно на этом этапе у Литовского княжества появилась возможность захвата не только Москвы, но и остальных удельных княжеств Руси. Это стало возможным из-за ослабления позиций Орды, которая в 1395 году потерпела крупное поражение от Тамерлана. Тверь на этом этапе начала отходить на второстепенный план, и к началу третьего этапа возвышения Москвы Тверь утратила свой статус, подчинившись никогда более скромному соседу.
+
+\subsubsection{Третий этап (1462–1533)}
+
+На третьем этапе возвышения Москвы основная борьба шла между Москвой и Великим княжеством Литовским. Остальные удельные княжества Руси уже практически полностью признали власть Москвы, и оставался только один альтернативный путь развития — Литовское княжество. В конечном итоге \textbf{победу Москвы предопределили политические системы двух центров}. \textbf{Москва пошла по пути централизации власти, когда основное управление строилась вокруг князя}. \textbf{В великом княжестве литовском фактически была олигархия}. В результате это \textbf{привело к нагноению системы управления и дальнейшего позитивного политического развития у данного княжества не было}.
+
+\pagebreak
+\section{Вопрос №9. Русь между Ордой и Литвой в 14–15 веках}
+
+К \textbf{середине XIII в.} русские земли оказались между Золотой Ордой и Великим княжеством Литовским. В Прибалтике на землях, населенных литовскими племенами возникло раннефеодальное государство. Его основателем считают \textbf{князя Миндовга}. Русские летописи впервые упоминают о нем в \textbf{1219 г.} В состав Литовского государства с момента его возникновения входили \textbf{земли в бассейне реки Неман} (города Новогрудок, Гродно и др.), так называемая \textbf{Черная Русь}.
+
+\hfill
+
+\textbf{Галицкое княжество} вошло в состав Польши, \textbf{земли южной и юго-западной Руси} (Киев, Волынь, Подолье и др.) после завоевания монголами платили дань Орде. Однако в связи с усилением Литовского государства после битвы при Синей Воле (приток Южного Буга) с Ордой (1363), эти земли \textbf{вошли в состав Великого княжества Литовского и Русского}.
+
+\hfill
+
+Центр русской политической жизни переместился в \textbf{северо-восточную} (Владимиро-Суздальскую) и \textbf{северо-западную} (Новгородскую) Русь.
+
+\hfill
+
+Апогей раздробленности северо-восточной Руси приходится на рубеж XIII—XIV вв. Тогда \textbf{на землях Владимиро-Суздальского княжества сложились 14 удельных княжеств} (Суздальское, Ростовское, Ярославское, Тверское, Московское, Переяславское и др.), в свою очередь, делившихся на еще более мелкие владения. Главой северо-восточной Руси правители Золотой Орды считали \textbf{великого князя Владимирского}. Им должен был становиться старший в роду из потомков Всеволода Большое Гнездо. Однако удельные князья вскоре \textbf{нарушили этот порядок, вступив в борьбу за великое княжение Владимирское, исходя из могущества своих княжеств и расположенности к ним ордынских ханов}. В этой борьбе за главенство среди русских земель наиболее активно действовали \textbf{тверские и московские князья}.
+
 \end{document}
