Minor formatting fixes

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -301,7 +301,11 @@
 
 \textbf{В 1478 году был присоединён Новгород}, \textbf{в 1480 году была достигнута независимость от Орды}, \textbf{в 1487 году начался процесс перехода подвластных Литве князей с их землями под власть Москвы}.
 
+\hfill
+
 К концу правления Василия III (\textbf{1533}) \textbf{Москва стала центром Русского централизованного государства}, присоединив помимо всей Северо-Восточной Руси и Новгорода также смоленские и черниговские земли, отвоёванные у Литвы.
+
+\hfill
 
 \textbf{16 января 1547 года} великий князь Московский \textbf{Иван IV был венчан на царство}. Он распустил все уделы и объявил себя единственным царем.
 
