Minor formatting fixes

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -330,15 +330,15 @@
     \item \textbf{Владимир} – пал в феврале 1238 года. Осада длилась 8 дней. 
 \end{enumerate}
 
-После взятия Владимира \textbf{фактически все восточные и северные земли} оказались в руках Батыя. Он покорял один город за другим (Тверь, Юрьев, Суздаль, Переславль, Дмитров). В начале марта пал \textbf{Торжок}, открыв тем самым путь монгольскому войску на север, к Новгороду. Но Батый совершил другой маневр и вместо похода на Новгород, он развернул свои войска и отправился штурмовать \textbf{Козельск} — и, понеся большие потери, развернусь в степи. Так завершился первый поход и первое нашествие татаро-монгольского войска на Русь.
+После взятия Владимира \textbf{фактически все восточные и северные земли} оказались в руках Батыя. Он покорял один город за другим (Тверь, Юрьев, Суздаль, Переславль, Дмитров). В начале марта пал \textbf{Торжок}, открыв тем самым путь монгольскому войску на север, к Новгороду. Но Батый совершил другой маневр и вместо похода на Новгород, он развернул свои войска и отправился штурмовать \textbf{Козельск} — и, понеся большие потери, развернулся в степи. Так завершился первый поход и первое нашествие татаро-монгольского войска на Русь.
 
 \subsection{Нашествие 1239–1242 годов}
 
-После перерыва в полтора года, в 1239 году началось новое нашествие на Русь войск хана Батыя. В этом году основные события происходили в \textbf{Переяславе и Чернигове}. Вялость наступления Батыя связана с тем, что в это время он вел активную борьбу с половцами, в частности на территории Крыма.
+После перерыва в полтора года, в 1239 году началось новое нашествие на Русь войск хана Батыя. В этом году основные события происходили в \textbf{Переяславле и Чернигове}. Вялость наступления Батыя связана с тем, что в это время он вел активную борьбу с половцами, в частности на территории Крыма.
 
 \hfill
 
-\textbf{Осень 1240} года Батый привел свое войско под стены \textbf{Киева}. Древняя столица Руси не смогла долго сопротивляться. Город пал 6 декабря 1240 года. Историки отмечают особое зверство, с которым вели себя захватчики. Киев был практически полностью уничтожен. После этих событий армия захватчиков разделилась:
+\textbf{Осенью 1240} года Батый привел свое войско под стены \textbf{Киева}. Древняя столица Руси не смогла долго сопротивляться. Город пал 6 декабря 1240 года. Историки отмечают особое зверство, с которым вели себя захватчики. Киев был практически полностью уничтожен. После этих событий армия захватчиков разделилась:
 
 \begin{enumerate}
     \item Часть отправилась на \textbf{Владимир-Волынский}.
@@ -376,7 +376,7 @@
 
 \subsubsection{Второй этап (конец 14 века – 1462)}
 
-На втором этапе \textbf{борьба продолжалась между Москвой, Тверью и Литвой}. Именно на этом этапе у Литовского княжества появилась возможность захвата не только Москвы, но и остальных удельных княжеств Руси. Это стало возможным из-за ослабления позиций Орды, которая в 1395 году потерпела крупное поражение от Тамерлана. Тверь на этом этапе начала отходить на второстепенный план, и к началу третьего этапа возвышения Москвы Тверь утратила свой статус, подчинившись никогда более скромному соседу.
+На втором этапе \textbf{борьба продолжалась между Москвой, Тверью и Литвой}. Именно на этом этапе у Литовского княжества появилась возможность захвата не только Москвы, но и остальных удельных княжеств Руси. Это стало возможным из-за \textbf{ослабления позиций Орды}, которая в 1395 году потерпела крупное поражение от Тамерлана. Однако в \textbf{1399 году она потерпела поражение от Орды, что создало хорошие условия для Москвы}. Тверь на этом этапе начала отходить на второстепенный план, и к началу третьего этапа возвышения Москвы Тверь утратила свой статус, подчинившись некогда более скромному соседу.
 
 \subsubsection{Третий этап (1462–1533)}
 
