[14-06-2023] Update tex sources

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -399,4 +399,136 @@
 
 Апогей раздробленности северо-восточной Руси приходится на рубеж XIII—XIV вв. Тогда \textbf{на землях Владимиро-Суздальского княжества сложились 14 удельных княжеств} (Суздальское, Ростовское, Ярославское, Тверское, Московское, Переяславское и др.), в свою очередь, делившихся на еще более мелкие владения. Главой северо-восточной Руси правители Золотой Орды считали \textbf{великого князя Владимирского}. Им должен был становиться старший в роду из потомков Всеволода Большое Гнездо. Однако удельные князья вскоре \textbf{нарушили этот порядок, вступив в борьбу за великое княжение Владимирское, исходя из могущества своих княжеств и расположенности к ним ордынских ханов}. В этой борьбе за главенство среди русских земель наиболее активно действовали \textbf{тверские и московские князья}.
 
+\pagebreak
+\section{Вопрос №10. Уничтожение гегемонии Золотой Орды}
+
+\subsection{Причины распада Золотой Орды}
+
+На самом деле, кризис в стране наблюдался еще \textbf{с середины XIV века}. Именно тогда начались \textbf{регулярные войны за престол}, а многочисленные наследники хана Джанибека спорили по поводу власти. Какие же причины повлияли на будущее разрушение государственного строя? 
+
+\begin{enumerate}
+    \item \textbf{Отсутствие сильного правителя} (за исключением Тохтамыша), способного удержать страну от внутренних кризисов.
+    \item С конца XIV века наблюдалось разложение государства, и многие ханы поспешили образовать свои независимые улусы.
+    \item Подвластные монголам территории также начинали бунтовать, почувствовав ослабление Золотой Орды.
+    \item \textbf{Регулярные междоусобные войны} приводили к тому, что в стране наблюдался очень серьезный экономический кризис.
+\end{enumerate}
+
+После того, как Тохтамыш передал престол своим наследникам, в стране возобновился \textbf{династический кризис}. Претенденты на престол не могли решить, кто же из них обязан возглавить государство. Если же, престол все же занимал один из наследников, он не мог гарантировать грамотность проводимых политических и экономических реформ. Все это влияло на состояние государства.
+
+\subsection{Процесс разрушения Золотой Орды}
+
+Историки уверены, что для раннего феодализма, процесс распада — неизбежная действительность. Такой распад происходил и с Древней Русью, а в XV века он стал наглядно проявляться на примере Золотой Орды. Ханы и их наследники давно искали способы обособления и восхваления собственной власти. Именно поэтому, \textbf{с начала 1400-х годов, многие территории, принадлежавшие Золотой Орде добились независимости}. Какие же ханства появились в этот период? 
+
+\begin{enumerate}
+    \item \textbf{Сибирское и Узбекское ханство} (1420-е годы).
+    \item \textbf{Ногайская Орда} (1440-е годы)
+    \item \textbf{Казанское и Крымское ханство} (1438 и 1441 соответственно).
+    \item \textbf{Казахское ханство} (1465).
+\end{enumerate}
+
+Разумеется, каждое ханство \textbf{стремилось к полной независимости, желая добиться своих прав и свобод}. К тому же, важным становился экономический вопрос разделения дани, поступающей из Древней Руси.
+
+Последним полноценным правителем Золотой Орды считается \textbf{Кичи-Мухаммед}. После его смерти, государство фактически перестало существовать. Долгое время главенствующим государством считалась \textbf{Большая орда, но и она XVI веке прекратила свое существование}.
+
+\pagebreak
+\section{Вопрос №11. Образование единого Российского государства в конце 15 в.}
+
+В середине XV в. Московское государство прошло через тяжелое испытание \textbf{гражданской войны}, когда власть великого князя \textbf{Василия II Васильевича Темного} (ослепленного в ходе борьбы) оспаривали его двоюродные братья во главе с галицким князем \textbf{Дмитрием Юрьевичем Шемякой}. Сын Василия Иван III Васильевич правил 43 года (1462–1505).
+
+За \textbf{вторую половину XV в.} Московское великое княжество постепенно \textbf{покорило все соседние княжества, объединив Северо-Восточную и частично – Северо-Западную Русь}. Были присоединены Дмитровское, Ростовское и Ярославское княжества, \textbf{политическая борьба внутри Пскова и Новгорода в вкупе с военными и дипломатическими мерами Москвы привела их от вассальной зависимости к полному подчинению}, к концу века та же участь постигла и былого соперника Москвы – Тверь.
+
+\textbf{Границы раздвинулись до Урала} – были покорены и христианизированы угро-финские княжества Великая Пермь и Вятка. В 1480 г. окончилось формальное подчинение Орде – после знаменитого \textbf{«стояния на Угре»} последний хан большой орды Ахмат не решился вступить в бой с войсками Ивана III и Большая Орда вскоре прекратила существование.
+
+\hfill
+
+Если ранее в Восточной Европе претендовал на доминирование один центр – \textbf{Великое княжество Литовское}, объединившее древнерусские княжества будущих Украины и Белоруссии и восточными границами которого являлись Вязьма, Можайск и Мценск, то отныне его соперником, перехватившим инициативу в объединении «Руси», становится могущественное \textbf{Великое княжество Московское}.
+
+Иван III титулуется государем «всея Руси» и «самодержцем», появляются первые случаи употребления и \textbf{царского} (императорского) титула. \textbf{Брак с наследницей византийских императоров Софьей Палеолог} включает его детей в родственный круг влиятельных европейских монархов.
+
+Будучи правнуком Витовта, Иван III выдает дочь за великого князя литовского Александра. Государственной эмблемой становится \textbf{двуглавый орел}, по образцу герба Священной Римской империи (в Европе того времени он считался и эмблемой погибшей Византии).
+
+К важнейшим внутриполитическим реформам относится \textbf{возникновение поместного землевладения}, когда конфискованные латифундии новгородского боярства поделили между военными слугами, которые могли пользоваться поместьями только при условии службы великому князю. \textbf{Узаконены права крестьян на смену землевладельца} (в осенний и весенний Юрьев день). Проведена \textbf{кодификация русского права и судопроизводства} – впервые с домонгольских времен на смену Русской Правде приходит новый \textbf{Судебник}. Успешная внешняя политика привела к \textbf{союзу с Крымским ханством против Литвы и Большой Орды, частичной зависимости от Москвы Казанского ханства}, началу борьбы за выход к Балтийскому морю – основана крепость \textbf{Ивангород близ устья Нарвы}.
+
+\pagebreak
+\section{Вопрос №12. Реформы Ивана Грозного и «Избранной Рады»: основные направления и главные итоги}
+
+\subsection{Состав Избранной рады}
+
+Задачи избранной рады заключалось в обсуждение тех задач и процессов, которые происходят в стране и за ее пределами, и поиск пути решения этих проблем, которые накопились. В состав этого органа входили следующие люди:
+
+\begin{multienumerate}
+    \mitemxxx{А. Курбский}{Священник Сильвестр}{Митрополит Макарий}
+    \mitemxx{А. Адашёв}{И. Висковатый}
+\end{multienumerate}
+
+\subsection{Реформы Избранной Рады при Иване Грозном}
+
+\subsubsection{Правовая реформа}
+
+\textbf{Введение нового свода законов — Судебника Ивана IV (1550 г.)}
+
+\begin{enumerate}
+    \item Ограничение произвола наместников
+    \item Введение наказания за должностные преступления
+\end{enumerate}
+
+\subsubsection{Военная реформа}
+
+\begin{enumerate}
+    \item Создание стрелецкого войска (1550 г.)
+    \item Введение Уложения о службе (1556 г.)
+    \item Упорядочение дворянского ополчения
+\end{enumerate}
+
+\subsubsection{Реформа местного управления}
+
+\begin{enumerate}
+    \item Отмена кормлений
+    \item Передача власти выборным лицам — уездным, губным и земским старостам в деревнях и излюбленным головам в городах
+\end{enumerate}
+
+\subsubsection{Церковная реформа}
+
+\textbf{Принятие церковным собором (1551 г.) решения из ста пунктов — Стоглав}
+
+\begin{enumerate}
+    \item Унификация церковных обрядов
+    \item Канонизация новых святых
+    \item Ужесточение дисциплины в духовенстве
+\end{enumerate}
+
+\pagebreak
+\section{Вопрос №13. Территориальный рост Российского государства в 16 веке}
+
+Основными задачами в области внешней политики России в XVI в. являлись: на западе - \textbf{необходимость иметь выход к Балтийскому морю}, на юго-востоке и востоке - \textbf{борьба с Казанским и Астраханскими ханствами и начало освоения Сибири}, на юге - \textbf{защита страны от набегов крымского хана}.
+
+\hfill
+
+
+Образовавшиеся в результате распада Золотой Орды Казанское и Астраханское ханства постоянно угрожали русским землям. Они держали в своих руках \textbf{Волжский торговый путь}. Наконец, это были районы \textbf{плодородной земли} (Иван Пересветов назвал их «подрайскими»), о которой давно мечтало русское дворянство. К освобождению стремились народы Поволжья - марийцы, мордва, чуваши. Решение проблемы подчинения Казанского и Астраханского ханств было возможно двумя путями: \textbf{либо посадить в этих государствах своих ставленников, либо завоевать их}.
+
+\hfill
+
+После ряда неудачных дипломатических попыток подчинить Казанское ханство в 1552 г. 150-тысячное войско Ивана IV \textbf{осадило Казань}, которая представляла в тот период первоклассную военную крепость. Чтобы облегчить задачу взятия Казани, в верховьях Волги (в районе Углича) была сооружена деревянная крепость, которую в разобранном виде сплавили вниз по Волге до впадения в нее реки Свияги. Здесь был возведен город \textbf{Свияжск}, ставший опорным пунктом борьбы за Казань. Работы по сооружению этой крепости возглавил талантливый мастер Иван Выродков. Он же руководил сооружением минных подкопов и осадных приспособлений.
+
+\hfill
+
+\textbf{Казань была взята штурмом 2 октября 1552 г.} В результате взрыва 48 бочек пороха, заложенных в подкопы, была разрушена часть стены Казанского кремля. Через проломы в стене русские войска ворвались в город. Хан Ядигир-Магмет был взят в плен. Впоследствии он крестился, получил имя Симеон Касаевич, стал владельцем Звенигорода и активным союзником царя.
+
+\hfill
+
+Спустя четыре года после взятия Казани в 1556 г. была \textbf{присоединена Астрахань}. \textbf{Чувашия и большая часть Башкирии добровольно вошли в состав России}. Зависимость от России признала \textbf{Ногайская орда}. Таким образом, новые плодородные земли и весь Волжский торговый путь оказались в составе России. Русские земли были избавлены от вторжений ханских войск. Расширились связи России с народами Северного Кавказа и Средней Азии.
+
+\hfill
+
+Присоединение Казани и Астрахани \textbf{открыло возможность для продвижения в Сибирь}. Богатые купцы - промышленники Строгановы получили от Ивана Грозного грамоты на владение землями по реке Тобол. На свои средства они сформировали отряд в 840 (по другим данным 600) человек из вольных казаков во главе с \textbf{Ермаком Тимофеевичем}. В \textbf{1581 г.} Ермак со своим войском проник на территорию Сибирского ханства, а спустя год разбил войска хана Кучума и взял его столицу Кашлык (Искер).
+
+\hfill
+
+Присоединение Поволжья и Сибири \textbf{имело в целом положительное значение для народов этого региона}: они вошли в состав государства, находившегося на более высоком уровне экономического и культурного развития. Местный господствующий класс стал со временем частью российского.
+
+\hfill
+
+В связи с началом \textbf{освоения в XVI в. территории Дикого поля} (плодородных земель к югу от Тулы) перед русским правительством встала задача укрепления южных границ от набегов крымского хана. С этой целью были построены \textbf{Тульская} (с середины XVI в.) и \textbf{Белгородская} (в 30 - 40-х г.г. XVII в.) засечные черты - оборонительные линии, состоявшие из завалов леса - засек, в промежутках между которыми ставили деревянные крепости - остроги, закрывавшие для татарской конницы проходы в засеках.
+
 \end{document}
